# mimir

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
ansible/: deploy-mimir.yml  inventory.yml
scripts/: prefetch-models.py
src/: mimir.py  mimir_diart.py
systemd/: mimir-diart.service  mimir.env  mimir.service
